# game

./: .gitignore  .replit  LICENSE  README.md  icon.icns  main.py  pyproject.toml  rename.sh  run.py2  sailboat.toml  setup.py
.github/workflows/: sailboat.yml
pushing_outshoot_unfold/: __init__.py  __main__.py  ascii.py  banner.py  eng.py  interactions.py  math.py  run.py  sci.py  sound.py
pushing_outshoot_unfold/days/: 0.day  0.toml  000a.toml  001a.toml  001b.toml  002a.toml  002b.toml  003a.toml  003b.toml  004a.toml  004b.toml  005a.toml  005b.toml  006a.toml  006b.toml  007a.toml  007b.toml  008a.toml  008b.toml  009a.toml  009b.toml  010a.toml  010b.toml  011a.toml  011b.toml  012a.toml  012b.toml  013a.toml  013b.toml  014a.toml  014b.toml  015a.toml  015b.toml  016a.toml  016b.toml  017a.toml  017b.toml  018a.toml  018b.toml  019a.toml  (+23 more)
pushing_outshoot_unfold/days2/: 10.day  10.toml  11.toml  12.day  12.toml  13.toml  14.day  14.toml  15.day  15.toml  16.day  16.toml  17.toml  18.day  18.toml  19.day  jan.news
pushing_outshoot_unfold/days3/: 19.toml  20  20.toml  21.day  21.toml  22.toml  feb.news  march.news
pushing_outshoot_unfold/daysF/: 345.toml  346.toml  347.toml
pushing_outshoot_unfold/daysJ/: 545.toml  546.toml  547.toml  548.toml
pushing_outshoot_unfold/daysM/: 123.toml  124.toml  125.toml  126.toml  127.toml
pushing_outshoot_unfold/daysplit/: 0010.toml  0020.toml  0030.toml  0040.toml  0050.toml  0060.toml  0070.toml  0080.toml  0090.toml  0100.toml  0110.toml  0120.toml  0130.toml  0140.toml  0150.toml  0160.toml  0170.toml  0180.toml  (+3 more)
