[tool.poetry]
name = "repl_python3_beta_bigbigproject"
version = "0.1.0"
description = ""
authors = ["Cole, Harshini, Cassidy"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
blessed = "^1.18.0"
playsound = "^1.2.2"
pydub = "^0.25.1"
replit = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
